--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,21 @@ version: '2'
 services:
   
   db:
+    container_name: odoo11_db
     image: postgres:10
+    ports:
+      - "5060:5432"
     environment:
       - POSTGRES_PASSWORD=odoo
       - POSTGRES_USER=odoo
       - POSTGRES_DB=postgres
+      - PGDATA=/data/postgres  
     volumes:
       - postgres-data:/var/lib/postgresql/11/data     
     restart: always
  
   web:
+    container_name: odoo11_web
     image: odoo:11.0
     depends_on:
       - db
@@ -19,21 +24,9 @@ services:
       - "11000:8069"
     tty: true
     command: -- --dev=reload
-    #command: odoo scaffold /mnt/extra-addons/test_module
     volumes:
       - ./addons:/mnt/extra-addons
       - ./etc:/etc/odoo
-    restart: always
-
-  pgadmin:
-    image: dpage/pgadmin4
-    depends_on:
-      - db
-    ports:
-      - "5060:80"
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=admin@admin.com
-      - PGADMIN_DEFAULT_PASSWORD=admin
     restart: always
 
 volumes:
