--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,9 @@ services:
       - POSTGRES_PASSWORD=odoo
       - POSTGRES_USER=odoo
       - POSTGRES_DB=postgres
-      - PGDATA=/data/postgres  
+      - PGDATA=/var/lib/postgresql/data/pgdata 
     volumes:
-      - postgres-data:/var/lib/postgresql/11/data     
+      - db-data:/var/lib/postgresql/data/pgdata   
     restart: always
  
   web:
@@ -27,9 +27,9 @@ services:
     volumes:
       - ./addons:/mnt/extra-addons
       - ./etc:/etc/odoo
+      - web-data:/var/lib/odoo
     restart: always
 
 volumes:
-  db:
-  web:
-  postgres-data:
+  db-data:
+  web-data:
